[metadata]
name = lto-cli
version = 0.0.0
author = LTO Network
author_email = info@ltonetwork.com
description = LTO Network CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ltonetwork/lto-cli
project_urls =
    Bug Tracker = https://github.com/ltonetwork/lto-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lto==1.1.*
    argparse
    configparser
    pathlib
    importlib-metadata~=4.8



[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lto = lto_cli.cli:main

